trunk/Archive2/b8/29e3cd83316c67/output
main.cpp:15:24: error: no member named 'put_time' in namespace 'std'
        stream << std::put_time(timet);
                  ~~~~~^
main.cpp:16:16: error: unexpected type name 'ostream': expected expression
        return ostream;
               ^
2 errors generated.
